--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ltbt-podcast",
+  "proxy": "https://10.0.0.133:5000",
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
