--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
