create product route

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "mongoose": "^6.2.4",
+    "mongoose": "^6.2.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
