--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.2.4"
   },
   "devDependencies": {
