--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "axios": "^0.25.0",
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.0",
