--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.0",
