--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "react-router-bootstrap": "^0.26.0",
+    "react-bootstrap": "^2.2.1",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
