--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "react-bootstrap": "^2.2.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.3",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2"
   },
