--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mdbreact": "^5.2.0",
     "react-bootstrap": "^2.2.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.3",
