--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "cloudinary": "^1.28.1",
     "dotenv": "^16.0.0",
     "express-async-handler": "^1.2.0",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^5.1.0",
     "mongoose": "^6.2.4",
     "multer": "^1.4.4",
     "streamifier": "^0.1.1"
