--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.3",
     "react-router-bootstrap": "^0.26.1",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "vercel": "^24.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.0",
