--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "name": "frontend",
   "proxy": "http://127.0.0.1:5000",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.0.0"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
