--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ltbt-podcast",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.0.0"
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "scripts": {
